# basic-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/include/: engine.h
engine/include/engine/: Engine.h  Entity.h  Input.h  Renderer.h  Shader.h  Window.h
engine/src/: Engine.cpp  Entity.cpp  Input.cpp  Renderer.cpp  Shader.cpp  Window.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
